--- a/TicketProject/Views/Shared/_Layout.cshtml
+++ b/TicketProject/Views/Shared/_Layout.cshtml
@@ -10,20 +10,8 @@
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top" style="background:#1C4881">
         <div class="container">
-            <div class="navbar-header">
-                @*<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>*@
+            <div class="navbar-header">               
                 @Html.ActionLink("Tickets", "Index", "Tickets", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                     @*<li>@Html.ActionLink("Home", "Index", "Home")</li>
-                       <li>@Html.ActionLink("About", "About", "Home")</li>
-                       <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
-                </ul>
             </div>
         </div>
     </div>
@@ -31,6 +19,10 @@
         @if (TempData["message"] != null)
         {
             <div class="alert alert-success">@TempData["message"]</div>
+        }
+        @if (TempData["messageError"] != null)
+        {
+            <div class="alert alert-danger">@TempData["messageError"]</div>
         }
         @RenderBody()
         <hr />
